--- a/src/Leads Template/LeadsTemplate.module.css
+++ b/src/Leads Template/LeadsTemplate.module.css
@@ -23,7 +23,7 @@
   background-color: white;
   position: relative;
   top: 0px;
-  z-index: 1100; /* Above header */
+  z-index: 1000;
 }
 
 /* Edit button */
