--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,9 +7,9 @@
 
 .sidebar {
     position: fixed;
-    top: 60px; /* Below AppHeader */
+    top: 0px;
     left: 0;
-    width: 250px;
+    width: 200px;
     height: calc(100% - 60px);
     background: #ffffff;
     padding: 24px;
@@ -137,9 +137,9 @@
 }
 
 .mainContent {
-    margin-left: 250px; /* Space for sidebar */
-    margin-top: 60px; /* Space for header */
-    padding: 24px; /* Add padding for separation */
+    margin-left: 250px;
+    margin-top: 0px; /* Space for header */
+    padding: 0px; /* Add padding for separation */
     flex: 1;
     overflow-y: auto;
     background: #f5f5f7; /* Light background to distinguish content */
@@ -151,7 +151,7 @@
     }
     .mainContent {
         margin-left: 0;
-        margin-top: 60px; /* Still below header on mobile */
-        padding: 16px; /* Slightly less padding on mobile */
+        margin-top: 0;
+        padding: 0;
     }
 }
