--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,19 +5,8 @@
     overflow: hidden;
 }
 
-.sheetTemplateContainer {
-    position: relative;
-    flex: 1;
-    overflow-y: auto;
-    background: rgb(246, 247, 248);
-    box-sizing: border-box;
-    width: 65%;
-    margin: 16px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
 @media (max-width: 768px) {
-    .sheetTemplateContainer {
+    .tableContainer {
         width: 100%;
         margin: 0;
         box-shadow: none;
